# ENRICHME_Releases

./: README.md
ais/: README.md
ais/act_rec_mln/: CMakeLists.txt  README.md  package.xml
ais/act_rec_mln/cfg/: location_mln.yaml_FDG  location_mln.yaml_UOL
ais/act_rec_mln/launch/: location_mln_FDG.launch  location_mln_UOL.launch
ais/act_rec_mln/scripts/: act_rec_mln_node.py  magnitudeSensor.py  sensor.py
ais/ais_door_monitor/: CMakeLists.txt  package.xml
ais/ais_door_monitor/cfg/: main_door_FDG.yaml  workshop_door_UOL.yaml
ais/ais_door_monitor/launch/: main_door_FDG.launch  workshop_door_UOL.launch
ais/ais_door_monitor/scripts/: notify_event.py
ais/ais_gazebo_plugins/: CMakeLists.txt  README.md  package.xml
ais/ais_gazebo_plugins/src/: gazebo_ros_binary_contact.cpp  gazebo_ros_presence.cpp
ais/ais_rosparams/: CMakeLists.txt  global.yaml  package.xml
ais/amb2openhab/: CMakeLists.txt  README.md  package.xml
ais/amb2openhab/launch/: amb2openhab.launch
ais/amb2openhab/scripts/: py_amb2openhab.py
ais/amb2openhab/src/: amb2openhab.cpp
ais/boot_nodes/: CMakeLists.txt  package.xml  readme.md
ais/boot_nodes/launch/: ami_boot_nodes.launch  kompai_boot_nodes.launch
ais/env_monitor/: CMakeLists.txt  package.xml
ais/env_monitor/cfg/: sensorConfigFDG.yaml  sensorConfigUOL.yaml
ais/env_monitor/launch/: env_monitor_FDG.launch  env_monitor_UOL.launch
ais/env_monitor/srv/: Env_Monitor_Configure.srv
ais/env_sensor/: CMakeLists.txt  NotesOnAirBox.txt  README.md  detect.sh  install.sh  package.xml
ais/env_sensor/descarted/: environmentalDemo.py  ros_pure_environment.py
ais/env_sensor/msg/: Environment.msg
ais/env_sensor/scripts/: env_sensor_node.py
ais/gazebo_ais/: README.md  gazebo_ais_LCAS.launch
ais/gazebo_ais/contact/: bathroomContact.urdf.xacro  bathroomContactDetector.xml  contactPlate.urdf.xacro  entranceContact.urdf.xacro  entranceContactDetector.xml  kitchenContact.urdf.xacro  kitchenContactDetector.xml
ais/gazebo_ais/presence/: entrancePresence.urdf.xacro  entrancePresenceDetector.xml  kitchenPresence.urdf.xacro  kitchenPresenceDetector.xml  loungePresence.urdf.xacro  (+2 more)
ais/lt_anomaly/: CMakeLists.txt  package.xml
ais/lt_anomaly/cfg/: lt_anomaly.yaml  lt_anomaly.yaml_FDG  lt_anomaly.yaml_UOL
ais/lt_anomaly/launch/: lt_anomaly_FDG.launch  lt_anomaly_UOL.launch
ais/lt_anomaly/scripts/: auto_suggest.py  binarySensor.py  lt_anomaly_monitor.py  magnitudeSensor.py  plotter.py  sensor.py
ais/mongodb_recorder/: CMakeLists.txt  package.xml
ais/multimaster/: CMakeLists.txt  README.md  package.xml
ais/ncp_event_notifier/: CMakeLists.txt  package.xml  readme.md
ais/openhab/: CMakeLists.txt  README.md  openhab  openhab-install.sh  package.xml
ais/ros_alchemy/: CMakeLists.txt  README.md  package.xml
ais/sensor_server/: CMakeLists.txt  README.md  package.xml
ais/user_status_server/: CMakeLists.txt  README.md  package.xml
ais/user_status_server/scripts/: user_status_server.py
ais/user_status_server/srv/: UserStatus.srv
human_perception/human_perception/: CMakeLists.txt  package.xml
human_perception/human_perception_launch/: CMakeLists.txt  package.xml
human_perception/human_perception_launch/launch/: human_perception.launch  human_perception_asus.launch  human_perception_asus.launch.save  human_perception_asus_rianomaly.launch  human_perception_demo.launch  human_perception_phymon.launch  human_perception_r2.launch  human_perception_r2_rosbag.launch  human_perception_r2_sc.launch  human_perception_rianomaly.launch  human_perception_withoutupperbodydetector.launch  launch_leg_and_upperbodydetector_kinect2_smh.launch  launch_only_rianomaly.launch  launch_onlybayestracker.launch  launch_onlydetectorsandtracking.launch  launch_onlyupperbodydetector.launch  launch_onlyupperbodydetector_kinect2.launch  launch_onlyupperbodydetector_kinect2_smh.launch  navigation_demo.launch  st_anomaly_bags.launch
human_perception/human_perception_launch/scripts/: approach_human.py  approach_human_sim.py  cameraPublisher.py  robot_moving.py  robot_talking.py  virtual_hbba.py  virtual_leg_detector.py  virtual_odom.py  virtual_people_tracker.py  virtual_people_tracker_ais.py  virtual_people_tracker_emulator.py  virtual_upper_body_detector.py
human_perception/reidentifier/: CMakeLists.txt  CMakeLists_.txt  package.xml
human_perception/reidentifier/cfg/: reidentifier.cfg
human_perception/reidentifier/config/: bioF.yaml  biometricFeatures.yaml  biometricFeatures_Serhan.yaml  biometricFeatures_fdg.yaml  biometricFeatures_offline.yaml  biometricFeatures_old.yaml  reidentifier.yaml  reidentifier_r2.yaml
human_perception/reidentifier/data/: allFeatures.txt
human_perception/reidentifier/include/: ROI.h  pointcloud.h  reidentifier.h
human_perception/reidentifier/launch/: reidentifier-debug.launch  reidentifier.launch  reidentifier.launch~  reidentifier_r2-debug.launch  reidentifier_r2.launch  reidentifier_r2_smh-debug.launch  reidentifier_r2_smh.launch  reidentifier_r2_train-debug.launch  reidentifier_r2_train.launch  reidentifier_r2_train_smh.launch  reidentifier_train.launch
human_perception/reidentifier/scripts/: match_people.py  match_people_r2.py  printFeatures.py  printFeatures_r2.py
human_perception/reidentifier/src/: AncillaryMethods.cpp  ROI.cpp  main.cpp  pointcloud.cpp  reidentifier.cpp  train.cpp
human_perception/st_anomaly_detector/: CMakeLists.txt  package.xml
human_perception/st_anomaly_detector/launch/: st_anomaly_detector.launch
human_perception/st_anomaly_detector/msg/: StringArray.msg
human_perception/st_anomaly_detector/scripts/: stanomaly_detector.py
human_perception/upper_body_detector/: CMakeLists.txt
physiological_monitoring/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
physiological_monitoring/config/: physiological_monitoring.yaml
physiological_monitoring/launch/: 15110057.xml  Cali-15110057.xml  estimate_from_rosbag.launch  optris_human_reader.launch  optris_human_reader.rviz
physiological_monitoring/msg/: PhysiologicalData.msg
physiological_monitoring/src/: physiological_monitoring.cpp
(+124 files in other folders)
