<?xml version="1.0"?>
<package>
  <name>env_sensor</name>
  <version>0.0.0</version>
  <description>Airbox for ROS under Linux </description>


  <maintainer email="mfernandezcarmona@lincoln.ac.uk">Manuel</maintainer>
  <author email="mfernandezcarmona@lincoln.ac.uk">Manuel</author>

  <license>GPL</license>


  <!-- <url type="website">http://wiki.ros.org/ros_pure</url> -->
  <!--  -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>python-requests</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>python-requests</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>

  </export>
</package>

