<?xml version="1.0"?>
<package>
  <name>human_perception</name>
  <version>1.0.0</version>
  <description>The ENRICHME human_perception metapackage</description>

  <maintainer email="scosar@lincoln.ac.uk">Serhan Cosar</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/human_perception</url> -->

  <author email="scosar@lincoln.ac.uk">Serhan Cosar</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>bayes_people_tracker</run_depend>
  <run_depend>bayes_people_tracker_logging</run_depend>
  <run_depend>ground_plane_estimation</run_depend>
  <run_depend>human_perception_launch</run_depend>
  <run_depend>upper_body_detector</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
