<?xml version="1.0"?>
<package>
  <name>human_perception_launch</name>
  <version>0.0.0</version>
  <description>The human_perception_launch package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="turtlebot@todo.todo">turtlebot</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/human_perception_launch</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bayes_people_tracker</build_depend>
  <build_depend>ground_plane_estimation</build_depend>
  <build_depend>leg_detector</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>ros_pure</build_depend>
  <build_depend>upper_body_detector</build_depend>
  <build_depend>virtual_ptu</build_depend>
  <run_depend>bayes_people_tracker</run_depend>
  <run_depend>ground_plane_estimation</run_depend>
  <run_depend>leg_detector</run_depend>
  <run_depend>people_msgs</run_depend>
  <run_depend>ros_pure</run_depend>
  <run_depend>upper_body_detector</run_depend>
  <run_depend>virtual_ptu</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>