<?xml version="1.0"?>
<package>
  <name>st_anomaly_detector</name>
  <version>0.0.1</version>
  <description>The short-term anomaly detector package</description>

  <maintainer email="scosar@lincoln.ac.uk">Serhan Cosar</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/reidentifier</url> -->

  <author email="scosar@lincoln.ac.uk">Serhan Cosar</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bayes_people_tracker</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>bayes_people_tracker</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

  <export/>
</package>
